2008-06-27 [paul]	0.3.0

	0.3.0 released

2008-04-29 [colin]	0.2.3cvs5

	* src/ytnef.c
		Add license header

2008-04-29 [colin]	0.2.3cvs4

	* src/ytnef.c
		Fix off-by-one overflow

2008-04-29 [colin]	0.2.3cvs3

	* src/ytnef.c
		Fix warnings

2008-04-29 [colin]	0.2.3cvs2

	* configure.ac
	* src/Makefile.am
	* src/mapi.h
	* src/mapidefs.h
	* src/mapitags.h
	* src/tnef-errors.h
	* src/tnef-types.h
	* src/ytnef.c
	* src/ytnef.h
		Use an internal libytnef, as the upstream
		one isn't maintained anymore

2008-04-18 [colin]	0.2.3cvs1

	* src/tnef_parse.c
		Use claws_unlink instead of g_unlink

2008-04-18 [paul]	0.2.3

	0.2.3 released

	* po/fi.po
	* po/fr.po
	* po/it.po
		updated by Flammie Pirinen, Colin/wwp, and
		Andrea Spadaccini

2008-04-18 [colin]	0.2.2cvs1

	* po/fr.po
		Update translation

2008-02-08 [paul]	0.2.2

	0.2.2 released

2008-02-08 [paul]	0.2.1cvs2

	* po/fi.po
		updated by Flammie Pirinen

2008-01-12 [colin]	0.2.1cvs1

	* .cvsignore
	* AUTHORS
	* COPYING
	* COPYING.ytnef
	* ChangeLog
	* INSTALL
	* Makefile.am
	* NEWS
	* PATCHSETS
	* README
	* autogen.sh
	* commitHelper
	* configure.ac
	* config/.cvsignore
	* config/Makefile.am
	* config/config.rpath
	* config/mkinstalldirs
	* po/.cvsignore
	* po/ChangeLog
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/it.po
	* po/pt_BR.po
	* po/remove-potcdate.sin
	* po/sk.po
	* src/.cvsignore
	* src/Makefile.am
	* src/gettext.h
	* src/tnef_dump.c
	* src/tnef_dump.h
	* src/tnef_parse.c
		Move tnef_parser to tnef_parse to fit tarballs and
		packages names

2007-12-17 [paul]	0.2.1

	0.2.1 released

2007-12-17 [paul]	0.2.0cvs4

	* po/hu.po
	* po/it.po
		updated by Pader Rezso and Andrea Spadaccini

2007-11-29 [ticho]	0.2.0cvs3

	* configure.ac
		Updated claws-mail minimum version.

2007-11-23 [paul]	0.2.0cvs2

	* po/pt_BR.po
		fixes to the header by Frederico Goncalves Guimaraes

2007-11-19 [colin]	0.2.0cvs1

	* po/pt_BR.po
		Fix breakage

2007-11-19 [paul]	0.2.0
