@@ -18,3 +18,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/ytnef.c;  ) > 0.2.3cvs3.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/ytnef.c;  ) > 0.2.3cvs4.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/ytnef.c;  ) > 0.2.3cvs5.patchset
+( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/tnef_parse.c;  ) > 0.3.0cvs1.patchset
