@@ -1,3 +1,8 @@
+2008-09-30 [colin]	0.3.0cvs1
+
+	* src/tnef_parse.c
+		Use g_stat
+
 2008-06-27 [paul]	0.3.0
 
 	0.3.0 released
